<!--
  ~    Copyright 2019 Maarten de Goede
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Clapp</string>

    <!-- Strings -->
    <string name="str_tap_to_clap">Tap or hold to clap!</string>
    <string name="str_share">%1$s \n\nhttps://clapp.page.link/download</string>
    <string name="str_onboarding_title">Has this ever happened to you:</string>
    <string name="str_onboarding_description">
        You are at a concert, and people are clapping. \n
        However, you have a drink in your hand so you only have one hand free, and you can\'t clap properly.  \n
        \n
        No more! With Clapp, you can clap with only one hand! All you have to do is simply grab your phone, unlock it, open Clapp, turn up the volume and tap a button! \n
        \n
        Clapping has never been this easy!
    </string>
    <string name="str_clap_speed">Clap speed:</string>

    <!-- Menu -->
    <string name="menu_light">Light mode</string>
    <string name="menu_dark">Dark mode</string>
    <string name="menu_black">Black mode</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy_policy">Privacy Policy</string>

    <!-- Actions -->
    <string name="action_start_clapping">Start clapping</string>

    <!-- Other -->
    <string name="url_privacy_policy">https://clapp-app.github.io/w/privacypolicy</string>
</resources>
